<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.logn.minesweeper.MainActivity">

    <TextView
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="#eee"
        android:gravity="center"
        android:text="@string/mine_name" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_below="@id/title_bar"
        android:background="#777" />

    <Button
        android:id="@+id/game_begin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="180dp"
        android:text="@string/play" />

    <RadioGroup
        android:id="@+id/game_mode_choose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/game_begin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/game_mode_primary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/primary" />

        <RadioButton
            android:id="@+id/game_mode_inter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inter" />

        <RadioButton
            android:id="@+id/game_mode_senior"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/senior" />
    </RadioGroup>
</RelativeLayout>
